--- a/src/html/simple_graph.html
+++ b/src/html/simple_graph.html
@@ -5,6 +5,24 @@
 <script type="text/javascript" src="https://www.google.com/jsapi"></script>
 
 <script type="text/javascript">
+	google.load("visualization", "1", {packages:["corechart"]});
+	google.setOnLoadCallback(drawChart);
+	function drawChart() {
+		var data = google.visualization.arrayToDataTable([
+		    ['Year', 'Sales', 'Expenses'],
+		    ['2004',  1000,      400],
+            ['2005',  1170,      460],
+            ['2006',  660,       1120],
+            ['2007',  1030,      540]
+        ]);
+
+		var options = {
+            title: 'Company Performance'
+        };
+		var g2= new google.visualization.LineChart(document.getElementById('graphdiv2'));
+	    g2.draw(data, options);
+
+	}
 
 </script>
 <script type="text/javascript">
